AUTOMAKE_OPTIONS = foreign

LDADD		= $(top_builddir)/tvision/libtvision.la
AM_CPPFLAGS	= -I$(top_srcdir)/tvision

noinst_PROGRAMS = demo

demo_SOURCES = \
	ascii.cc \
	ascii.h \
	calc.cc \
	calc.h \
	calendar.cc \
	calendar.h \
	demohelp.h \
	fileview.cc \
	fileview.h \
	gadgets.cc \
	gadgets.h \
	mousedlg.cc \
	mousedlg.h \
	puzzle.cc \
	puzzle.h \
	tvcmds.h \
	tvdemo1.cc \
	tvdemo2.cc \
	tvdemo3.cc \
	tvdemo.h

EXTRA_DIST = DEMOHELP.H32
