LDADD		= $(top_builddir)/tvision/libtvision.la
AM_CPPFLAGS	= -I$(top_srcdir)/tvision

noinst_PROGRAMS	= \
	tvguid01 \
	tvguid02 \
	tvguid03 \
	tvguid04 \
	tvguid05 \
	tvguid06 \
	tvguid07 \
	tvguid08 \
	tvguid09 \
	tvguid10 \
	tvguid11 \
	tvguid12 \
	tvguid13 \
	tvguid14 \
	tvguid15 \
	tvguid16 \
	background \
	listbox \
	load \
	nomenus \
	splash \
	tvedit \
	tvlife  \
	validator

tvguid01_SOURCES	= tvguid01.cc
tvguid02_SOURCES	= tvguid02.cc
tvguid03_SOURCES	= tvguid03.cc
tvguid04_SOURCES	= tvguid04.cc
tvguid05_SOURCES	= tvguid05.cc
tvguid06_SOURCES	= tvguid06.cc tvgid.h
tvguid07_SOURCES	= tvguid07.cc tvgid.h
tvguid08_SOURCES	= tvguid08.cc tvgid.h
tvguid09_SOURCES	= tvguid09.cc tvgid.h
tvguid10_SOURCES	= tvguid10.cc tvgid.h
tvguid11_SOURCES	= tvguid11.cc tvgid.h
tvguid12_SOURCES	= tvguid12.cc tvgid.h
tvguid13_SOURCES	= tvguid13.cc tvgid.h
tvguid14_SOURCES	= tvguid14.cc tvgid.h
tvguid15_SOURCES	= tvguid15.cc tvgid.h
tvguid16_SOURCES	= tvguid16.cc tvgid.h
background_SOURCES	= background.cc
listbox_SOURCES		= listbox.cc
load_SOURCES		= load.cc
nomenus_SOURCES		= nomenus.cc
splash_SOURCES		= splash.cc
tvedit_SOURCES		= tvedit.cc
tvlife_SOURCES		= tvlife.cc
validator_SOURCES	= validator.cc

EXTRA_DIST	= \
	README
