lib_LTLIBRARIES		= libtvision.la

libtvision_la_LDFLAGS	= -version-info 0:8:0
libtvision_la_LIBADD	= $(SCREEN_LIB)
libtvision_la_CPPFLAGS	= -I$(top_srcdir)/tvision

libtvision_la_SOURCES	= \
	TApplication.cc \
	TBackground.cc \
	TButton.cc \
	TChDirDialog.cc \
	TCheckBoxes.cc \
	TCluster.cc \
	TCollection.cc \
	TCommandSet.cc \
	TDeskTop.cc \
	TDialog.cc \
	TDirCollection.cc \
	TDirListBox.cc \
	TEditor.cc \
	TEditWindow.cc \
	TFileCollection.cc \
	TFileDialog.cc \
	TFileEditor.cc \
	TFileList.cc \
	TFrame.cc \
	TGroup.cc \
	THistory.cc \
	THistoryViewer.cc \
	THistoryWindow.cc \
	TIndicator.cc \
	TInputLine.cc \
	TLabel.cc \
	TListBox.cc \
	TListViewer.cc \
	TMemo.cc \
	TMenuBar.cc \
	TMenuBox.cc \
	TMenuPopup.cc \
	TMenuView.cc \
	TMultiCheckBoxes.cc \
	TObject.cc \
	TOutline.cc \
	TParamText.cc \
	TPoint.cc \
	TProgram.cc \
	TRadioButtons.cc \
	TResourceCollection.cc \
	TResourceFile.cc \
	TScrollBar.cc \
	TScroller.cc \
	TSortedCollection.cc \
	TStaticText.cc \
	TStatusLine.cc \
	TStringCollection.cc \
	TStrListMaker.cc \
	TValidator.cc \
	TView.cc \
	TWindow.cc \
	allnames.cc \
	asm.cc \
	colorsel.cc \
	drivers.cc \
	editstat.cc \
	helpbase.cc \
	help.cc \
	histlist.cc \
	menu.cc \
	misc.cc \
	msgbox.cc \
	new.cc \
	palette.cc \
	sall.cc \
	stddlg.cc \
	system.cc \
	textview.cc \
	tobjstrm.cc \
	tvtext.cc

pkginclude_HEADERS = \
	app.h \
	buffers.h \
	colorsel.h \
	dialogs.h \
	drawbuf.h \
	editors.h \
	helpbase.h \
	help.h \
	menus.h \
	msgbox.h \
	objects.h \
	outline.h \
	resource.h \
	stddlg.h \
	system.h \
	textview.h \
	tkeys.h \
	tobjstrm.h \
	ttypes.h \
	tvconfig.h \
	tv.h \
	tv_api_compat.h \
	tvobjs.h \
	util.h \
	validate.h \
	views.h
